# ccDemo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  six.py  test.py
.ai/agents/: code-reviewer.md  design-agent.md  general-purpose.md  task-executor.md
.ai/scripts/: ai-pipeline.sh
.ai/templates/: code-review.md
.ai/workflows/: feature-pipeline.yaml
.claude/prompts/: fix.md
.claude/workflows/: java-bugfix.md
six_digit_crypto/: __init__.py  core.py  exceptions.py  validation.py
tests/: test_six_digit_crypto.py
